[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Objects/slider.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Player_Sprite_Slider" type="HSlider" parent="."]
margin_left = 5.0
margin_top = 20.0
margin_right = 505.0
margin_bottom = 40.0
max_value = 5.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Sprite_Label" type="Label" parent="Player_Sprite_Slider"]
margin_left = 502.0
margin_top = 1.0
margin_right = 542.0
margin_bottom = 15.0
text = "Player size: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dummy_Slider" type="HSlider" parent="."]
margin_left = 5.0
margin_top = 40.0
margin_right = 505.0
margin_bottom = 60.0
max_value = 5.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dummy_Label" type="Label" parent="Dummy_Slider"]
margin_left = 502.0
margin_top = 1.0
margin_right = 542.0
margin_bottom = 15.0
text = "Dummy size: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera_Slider" type="HSlider" parent="."]
margin_left = 5.0
margin_top = 60.0
margin_right = 505.0
margin_bottom = 80.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera_Label" type="Label" parent="Camera_Slider"]
margin_left = 502.0
margin_top = 1.0
margin_right = 542.0
margin_bottom = 15.0
text = "Camera zoom: 0.4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed_Slider" type="HSlider" parent="."]
margin_left = 5.0
margin_top = 80.0
margin_right = 505.0
margin_bottom = 100.0
min_value = 10.0
max_value = 300.0
value = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed_Label" type="Label" parent="Speed_Slider"]
margin_left = 502.0
margin_top = 1.0
margin_right = 616.0
margin_bottom = 15.0
text = "Player speed: 200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump_Slider" type="HSlider" parent="."]
margin_left = 5.0
margin_top = 100.0
margin_right = 505.0
margin_bottom = 120.0
min_value = 10.0
max_value = 600.0
value = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump_Label" type="Label" parent="Jump_Slider"]
margin_left = 502.0
margin_top = 1.0
margin_right = 616.0
margin_bottom = 15.0
text = "Player jump: 500"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile_Speed_Slider" type="HSlider" parent="."]
margin_left = 5.0
margin_top = 120.0
margin_right = 505.0
margin_bottom = 140.0
min_value = 32.0
max_value = 400.0
value = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile_Speed_Label" type="Label" parent="Projectile_Speed_Slider"]
margin_left = 502.0
margin_top = 1.0
margin_right = 57.0
margin_bottom = 14.0
text = "Projectile speed: 32"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile_Lifetime_Slider" type="HSlider" parent="."]
margin_left = 5.0
margin_top = 140.0
margin_right = 505.0
margin_bottom = 160.0
min_value = 1.0
max_value = 20.0
value = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile_Lifetime_Label" type="Label" parent="Projectile_Lifetime_Slider"]
margin_left = 502.0
margin_top = 1.0
margin_right = 57.0
margin_bottom = 14.0
text = "Projectile lifetime: 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile_Size_Slider" type="HSlider" parent="."]
margin_left = 5.0
margin_top = 160.0
margin_right = 505.0
margin_bottom = 180.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile_Size_Label" type="Label" parent="Projectile_Size_Slider"]
margin_left = 502.0
margin_top = 1.0
margin_right = 609.0
margin_bottom = 15.0
text = "Projectile size: 0.1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Player_Sprite_Slider" to="." method="_on_Player_Sprite_Slider_value_changed"]
[connection signal="value_changed" from="Dummy_Slider" to="." method="_on_Dummy_Slider_value_changed"]
[connection signal="value_changed" from="Camera_Slider" to="." method="_on_Camera_Slider_value_changed"]
[connection signal="value_changed" from="Speed_Slider" to="." method="_on_Speed_Slider_value_changed"]
[connection signal="value_changed" from="Jump_Slider" to="." method="_on_Jump_Slider_value_changed"]
[connection signal="value_changed" from="Projectile_Speed_Slider" to="." method="_on_Projectile_Speed_Slider_value_changed"]
[connection signal="value_changed" from="Projectile_Lifetime_Slider" to="." method="_on_Projectile_Lifetime_Slider_value_changed"]
[connection signal="value_changed" from="Projectile_Size_Slider" to="." method="_on_Projectile_Size_Slider_value_changed"]
